# a2a

./: .gitignore  A2A_개발_레퍼런스_가이드.md  QUICK_START.md  README.md  adk_config.py  final_demo.py  integration_example.py  main.py  mcp_http_client.py  mcp_integration.py  pyproject.toml  requirements.txt  run_demo.py  run_full_demo.py  run_with_mcp.py  simple_test.py  test_architecture.py  uv_run.py
a2a_agents/: __init__.py  travel_agent.py
adk_agents/: multi_agent_orchestrator.py  travel_agent.py
app/: __init__.py  config.py
app/models/: __init__.py  agent.py  sse.py  travel.py
app/routes/: __init__.py  a2a_routes.py  sse_routes.py  travel_routes.py
app/services/: __init__.py  a2a_communication_service.py  google_ai_service.py  sse_service.py  travel_recommendation_service.py
mcp_server/: http_mcp_server.py
